multicloud migrated push